--- a/Cloud Village/Packages/manifest.json
+++ b/Cloud Village/Packages/manifest.json
@@ -11,6 +11,7 @@
     "com.unity.xr.interactionsubsystems": "1.0.1",
     "com.unity.xr.management": "3.2.16",
     "com.unity.xr.oculus": "1.5.0",
+    "com.unity.xr.windowsmr": "2.4.1",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
