--- a/Cloud Village/Packages/manifest.json
+++ b/Cloud Village/Packages/manifest.json
@@ -8,7 +8,8 @@
     "com.unity.textmeshpro": "2.1.1",
     "com.unity.timeline": "1.2.17",
     "com.unity.ugui": "1.0.0",
-    "com.unity.xr.interactionsubsystems": "1.0.1",
+    "com.unity.xr.interaction.toolkit": "0.9.4-preview",
+    "com.unity.xr.interactionsubsystems": "1.0.0",
     "com.unity.xr.management": "3.2.16",
     "com.unity.xr.oculus": "1.5.0",
     "com.unity.xr.windowsmr": "2.4.1",
