--- a/Cloud Village/Assets/Plugins/Android/AndroidManifest.xml
+++ b/Cloud Village/Assets/Plugins/Android/AndroidManifest.xml
@@ -12,5 +12,5 @@
     <meta-data android:name="com.samsung.android.vr.application.mode" android:value="vr_only" />
     <meta-data android:name="com.oculus.supportedDevices" android:value="quest|delmar" />
   </application>
-  <uses-feature android:name="android.hardware.vr.headtracking" android:version="1" android:required="true" />
+  <uses-feature android:name="android.hardware.vr.headtracking" android:version="1" android:required="false" />
 </manifest>
